# ia-dl

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/annas_dl/: annas_client.py  cli.py  config.py  downloader.py  main.py  s3.py
src/ia_dl/: __init__.py  cli.py  config.py  db.py  downloader.py  ia_client.py  main.py  s3.py  urn.py
